[package]
name = "darakbang-engine"
version = "0.0.1"
authors = [ "Alex4386 <psh010209@gmail.com>", "RanolP <public.ranolp@gmail.com>", "SLoWMoTIoN <admin@slowmotion.dev>" ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
diesel = "1.4.3"
juniper = "0.14.2"
juniper_rocket = "0.5.2"
tokio = "0.2.13"