[package]
name = "darakbang-engine"
version = "0.0.1"
authors = [ "Alex4386 <psh010209@gmail.com>", "RanolP <public.ranolp@gmail.com>", "SLoWMoTIoN <admin@slowmotion.dev>", "kiwiyou <kiwiyou.dev@gmail.com>" ]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
serde = "1.0.105"
serde_json = "1.0.48"
diesel = { version = "1.4.3", features = ["mysql", "r2d2"] }
dotenv = "0.15.0"
juniper = "0.14.2"
tokio = "0.2.13"
log = "0.4.8"
fern = "0.6.0"
chrono = "0.4.11"
colored = "1.9.3"
